--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 
               <!-- Begin MARTY MCFLY -->
               <li class="home-blog-post">
-                <div class="blog-thumb">
-                  <a href="students/marty_mcfly.html">
-                  <img width="304" height="304" class="prof-image" src="img/students/marty_mcfly_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="doc brown">
-                </a>
-                </div>
+  <div class="blog-thumb">
+    <a href="students/marty_mcfly.html">
+      <img width="304" height="304" class="prof-image" src="img/students/marty_mcfly_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="doc brown">
+    </a>
+  </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
@@ -114,12 +114,12 @@
               <!-- End MARTY MCFLY -->
 
               <!-- Begin DOC BROWN -->
-              <li class="home-blog-post">
-                <div class="blog-thumb">
-                  <a href="students/doc_brown.html>
-                  <img width="304" height="304" class="prof-image" src="img/students/doc_brown_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="doc brown">
-                  </a>
-                </div>
+             <li class="home-blog-post">
+  <div class="blog-thumb">
+    <a href="students/doc_brown.html">
+      <img width="304" height="304" class="prof-image" src="img/students/doc_brown_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="doc brown">
+    </a>
+  </div>
 
                <div class="blog-title">
                   <div class="big-comment">
